refactor: unify operations via Map<String, Boolean> in calculator
Backend:
- DetailDto: replace hasLak/hasCongrev/hasTisnenie/hasLamination/customExtraFlags
  with unified Map<String, Boolean> operations
- CalculationRequest: merge extras + customExtras into single List<ExtraDto> extras
- CostCalculator: simplify calculateTotalCost signature (remove customExtras param),
  unified loop over operations map with cost lookup by name
- CalculatorService: update DTO conversion for new unified structure
- CostCalculatorTest: update all 11 tests for new operations map API

Frontend:
- types/index.ts: Detail.operations: Record<string, boolean>, remove customExtras
- useCalculator.ts: remove customExtras state, add updateDetailOperation,
  removeCustomExtra cleans operations map across all details
- LayoutTable.tsx: operation checkboxes generated from unified extras list
- ExtrasBlock.tsx: all operations (standard + custom) in single list
- App.tsx: update component calls and detail cost calculation

Docs:
- Update PROJECT_STRUCTURE.md, README.md, frontend/README.md